# ktp-testlib

./: .gitignore  CMakeLists.txt  README
cmake/modules/: FindDBusGLib.cmake  FindGIO.cmake  FindTelepathyGLib.cmake  FindTelepathyQt4.cmake
dbus-1/: CMakeLists.txt  session.conf.in
dbus-1/services/: CMakeLists.txt  account-manager.service.in
lib/: CMakeLists.txt  GLibTest  KTelepathyTestLibConfig.cmake.in  KTelepathyTestLibMacros.cmake.in  NepomukTest  Test  glibtest.cpp  glibtest.h  nepomukserverrc.in  nepomuktest.cpp  nepomuktest.h  telepathy-base-test.cpp  telepathy-base-test.h  telepathy_testlib_export.h  test.cpp  test.h
lib/glib/: CMakeLists.txt  contacts-conn.c  simple-channel-request.c  simple-manager.c
lib/glib/callable/: CMakeLists.txt
lib/glib/contactlist/: CMakeLists.txt
lib/glib/csh/: CMakeLists.txt
lib/glib/echo/: CMakeLists.txt
lib/glib/echo2/: CMakeLists.txt
lib/glib/future/: CMakeLists.txt
lib/glib/future/call/: CMakeLists.txt
lib/glib/future/conference/: CMakeLists.txt
lib/glib/future/extensions/: CMakeLists.txt  all.xml  channel.xml  extensions.h  misc.xml
lib/python/: account-manager.py
tools/: CMakeLists.txt  qt4-client-gen.py  with-nepomuk-sandbox.sh.in
